<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SoPlay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="episode_text">%1$s</string>
    <string name="title_trending">Trend</string>
    <string name="title_latest">So`ngi</string>
    <string name="no_connection_title">Internet Mavjud Emas</string>
    <string name="no_connection_des">Tarmoqqa ulanish yo`q, tarmoq sozlamalarini tekshiring yoki qaytadan urinib ko`ring !</string>
    <string name="try_again">Qayta Urinish</string>
    <string name="requires_android_12">Requires Android 12+</string>
    <string name="use_unique_theme_for_each_item">Theme as Anime/Manga </string>
    <string name="restart_app">Restart App?</string>
    <string name="do_it">Do It!</string>

    <string name="title_favorite">Sevimli</string>
    <string name="title_search">Qidirsh</string>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string name="animations">Animations</string>
    <string name="seek_seconds_forward">+%d seconds</string>
    <string name="seek_seconds_backward">-%d seconds</string>
    <string name="no_favorites_text">Sevimlilaringiz shu yerda chiqadi</string>
    <string name="imageview_in_main">ImageView in Main</string>

    <string name="splash_c2_image">Splash C2 Image</string>

    <string name="image_title">IMAGE TITLE</string>
    <string name="cover_of_anime">coverOfAnime</string>
    <string name="synopsis_header_title">Synopsis:</string>
    <string name="not_started_yet">Not Started Yet</string>
    <string name="select_episode">Select Episode</string>
    <string name="episode">Episode %1$s</string>
    <string name="last_watched_format">Last Watched: %1$s</string>
    <string name="loading_episode">Loading Episode</string>
    <string name="speed">%1$sx</string>
    <string name="back_to_home">back to home</string>


    <!-- Preference Titles -->
    <string name="settings">Sozlamalar</string>
    <string name="mx_player_summary">Will only work if you have MX Player installed on your device</string>
    <string name="mx_player_title">Use MX player</string>
    <string name="external_player_off_summary">Using internal player</string>
    <string name="external_player_on_summary">Using external player</string>
    <string name="external_player_title">Use external video player</string>
    <string name="dynamic_colors_disabled_summary">Dynamic colors disabled</string>
    <string name="dynamic_colors_enabled_summary">Dynamic colors enabled</string>
    <string name="dynamic_colors_title">Use dynamic colors</string>
    <string name="source_cat_title">Source</string>
    <string name="source_list_pref_title">Select Source</string>
    <string name="pip_disabled">Picture-in-picture disabled</string>
    <string name="pip_enabled">Picture-in-picture enabled</string>
    <string name="pip_title">Enable PiP</string>
    <string name="theme_cat_title">Theme</string>
    <string name="player_cat_title">Player</string>
    <string name="version_current">Version %1$s</string>
    <string name="donate_goal">(Let\'s reach to $200!)</string>

    <string name="player">Player</string>
    <string name="dark_mode_pref_title">Tungi rejim</string>
    <string name="update_available">Update Available</string>
    <string name="update_not_available">No Update Available</string>
    <string name="downloading_update">Downloading Update</string>
    <string name="check_update_pref_summary">Donate For Developers</string>
    <string name="check_update_pref">Dasturchilar</string>
    <string name="sort">Sort</string>
    <string name="video_cache_perf_title">Enable Video Cache</string>
    <string name="video_cache_perf_summray_disabled">Video cache disabled in player</string>
    <string name="video_cache_perf_summray_enabled">Video cache enabled in player</string>
    <string name="oled_theme_variant">OLED theme variant</string>
    <string name="auto_play_summary">Autoplay next episode when the current episode ends</string>
    <string name="auto_play_title">Autoplay next episode</string>
    <string name="press_back_again_in_player">Press Back Again to Exit Player</string>
    <string name="repo">professorDeveloper/SoPlay</string>
    <string name="telegram">https://t.me/soplayapp</string>
    <string name="github">https://github.com/professorDeveloper/SoPlay</string>
    <string name="theme" tools:ignore="ExtraTranslation">Theme</string>
    <string name="ui_settings" tools:ignore="ExtraTranslation">UI Settings</string>
    <string name="watch">Watch</string>
    <string name="use_material_you">Material You</string>
    <string name="custom_theme">Custom Theme:</string>
    <string name="use_custom_theme">Custom Theme</string>
    <string name="color_picker">Color Picker</string>
    <string name="default_ep_view">Default Item View</string>
    <string name="show_yt">Show ExtrenalPlayer Link</string>

</resources>