<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/nav_bg_inv"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <ImageButton
                        android:id="@+id/settingsBack"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/nav_bg_inv"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_round_arrow_back_ios_new_24"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/settings"
                    android:textSize="28sp" />

                <ImageView
                    android:id="@+id/settingsLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:clipToPadding="false"
            android:orientation="vertical"

            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <Button
                android:id="@+id/settingsDev"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="-32dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="-32dp"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="Dasturchilar"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_round_accessible_forward_24"
                app:iconPadding="16dp"
                app:iconSize="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="3"
                android:text="SoPlay ijodkorini qo‘llab-quvvatlamoqchimisiz?\nXayriya qilish haqida o‘ylab ko‘ring"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/settingBuyMeCoffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_bmc_button"
                    tools:ignore="ContentDescription" />


                <ImageView
                    android:id="@+id/settingUPI"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_github_sponsor"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:alpha="0.58"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/donate_goal"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/loginGithub"
                    android:layout_width="48dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_github"
                    app:tint="@color/md_theme_dark_9_onPrimaryContainer"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/loginTelegram"
                    android:layout_width="48dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:src="@drawable/ic_telegram"
                    app:tint="@color/md_theme_dark_9_onPrimaryContainer"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/settingsVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:alpha="0.58"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/version_current"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>